# climate-control

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  build_and_run.sh  main.cpp
Elements/: CMakeLists.txt  CustomSlider.qml  TempIcon.qml  ToggleIcon.qml
